# rules_pkg

./: .bazelrc  .gitignore  README.md  WORKSPACE  internal_deps.bzl  jetbrains.bazelproject
.github/workflows/: ci.bazelrc  ci.yaml
docs/: BUILD.bazel  repositories.md  rules.md
example/file_size/: BUILD.bazel
example/pkg_tar/: BUILD.bazel
pkg/: BUILD.bazel  defs.bzl  go_deps.bzl  repositories.bzl
pkg/private/: BUILD.bazel  providers.bzl
pkg/private/rules/: BUILD.bazel  archiver.go  file_size.bzl  pkg_tar.bzl
