"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//pkg/private:__pkg__"],
)

bzl_library(
    name = "pkg_tar",
    srcs = ["pkg_tar.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "file_size",
    srcs = ["file_size.bzl"],
    visibility = ["//:__subpackages__"],
)

go_binary(
    name = "archiver",
    srcs = ["archiver.go"],
    visibility = ["//visibility:public"],
)
